--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
