--- a/service/package.json
+++ b/service/package.json
@@ -4,12 +4,16 @@
     "description": "This demonstrates a service for a web application.",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "author": "",
     "license": "MIT",
     "dependencies": {
-      "express": "^4.18.2",
-      "uuid": "^10.0.0"
+        "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "express": "^4.21.1",
+        "jsonwebtoken": "^9.0.2",
+        "uuid": "^10.0.0"
     }
-  }
+}
