--- a/service/package.json
+++ b/service/package.json
@@ -4,7 +4,8 @@
     "description": "This demonstrates a service for a web application.",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "build": "vite build"
     },
     "author": "",
     "license": "MIT",
