--- a/service/package.json
+++ b/service/package.json
@@ -15,6 +15,8 @@
         "cors": "^2.8.5",
         "express": "^4.21.1",
         "jsonwebtoken": "^9.0.2",
+        "mongodb": "^6.10.0",
         "uuid": "^10.0.0"
-    }
+    },
+    "keywords": []
 }
