--- a/service/package.json
+++ b/service/package.json
@@ -18,7 +18,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.10.0",
         "mongoose": "^8.8.2",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "ws": "^8.18.0"
     },
     "keywords": []
 }
