--- a/service/package.json
+++ b/service/package.json
@@ -19,7 +19,8 @@
         "mongodb": "^6.10.0",
         "mongoose": "^8.8.2",
         "uuid": "^10.0.0",
-        "ws": "^8.18.0"
+        "ws": "^8.18.0",
+        "wscat": "^6.0.1"
     },
     "keywords": []
 }
